--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,14 @@ body {
     margin: 0;
 }
 
-#table {
+#cardTable {
     border: 4px solid brown;
     display: flex;
     flex-direction: column;
     background: #67A88D;
     height: 100vh;
+    position: relative;
+    z-index: 10000;
 }
 
 .card {
